tests/bits-param/too-few-bits.stderr
error[E0277]: the trait bound `False: FillsUnalignedBits` is not satisfied
 --> tests/bits-param/too-few-bits.rs:4:1
  |
4 | pub struct SignInteger {
  | ^^^ the trait `FillsUnalignedBits` is not implemented for `False`, which is required by `<<SignInteger as CheckFillsUnalignedBits>::CheckType as DispatchTrueFalse>::Out: FillsUnalignedBits`
  |
  = help: the trait `FillsUnalignedBits` is implemented for `True`
note: required by a bound in `CheckFillsUnalignedBits`
 --> src/private/checks.rs
  |
  | pub trait CheckFillsUnalignedBits
  |           ----------------------- required by a bound in this trait
  | where
  |     <Self::CheckType as DispatchTrueFalse>::Out: FillsUnalignedBits,
  |                                                  ^^^^^^^^^^^^^^^^^^ required by this bound in `CheckFillsUnalignedBits`
  = note: `CheckFillsUnalignedBits` is a "sealed trait", because to implement it you also need to implement `scryer_modular_bitfield::private::checks::FillsUnalignedBits`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following type implements the trait:
            scryer_modular_bitfield::private::checks::True
